# metronome_project

./: .gitignore  Dockerfile  Makefile  README.md
simple-aggregator-python/: .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
simple-aggregator-python/simple_aggregator_python/: app.py  containers.py  domain_model.py  routers.py  schema.py  service.py
simple-aggregator-python/tests/: test_domain_model.py  test_e2e.py  test_service.py
