[tool.poetry]
name = "simple-aggregator-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "0.103.2"
uvicorn = "0.23.2"
pydantic = "2.4.2"
duckdb = "0.9.0"
pydantic-settings = "2.0.3"
numpy = "1.25.0"
pandas = "2.1.1"
dependency-injector = "4.41.0"
PyYaml = "6.0.1"
fastapi-pagination = "0.12.10"
ufmt = "2.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
